--- a/views/index.erb
+++ b/views/index.erb
@@ -1,4 +1,4 @@
 <form action = '/checkout' methodt = "POST"> 
 <input type = "text" id = "item" name = "item">
-
+<input type="submit" value="submit">
 </form>
